使用 Colaboratory 创建

--- a/“Python_1_IO_ipynb”.ipynb
+++ b/“Python_1_IO_ipynb”.ipynb
@@ -250,9 +250,47 @@
     {
       "cell_type": "code",
       "metadata": {
+        "id": "3H8Qphl8Wu76",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 51
+        },
+        "outputId": "e2459598-51c4-49eb-c5b5-4a3e1f0e2076"
+      },
+      "source": [
+        "c = int(input(\"請輸入：\"))\n",
+        "type(c)"
+      ],
+      "execution_count": 13,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "請輸入：100\n"
+          ],
+          "name": "stdout"
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "int"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 13
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
         "id": "I-bbsfCJbTbk",
         "colab_type": "code",
-        "outputId": "378a76a8-c663-43ed-a4fb-7d478ec21678",
+        "outputId": "cc305ff7-0235-4051-e170-9221f398cc9e",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 51
@@ -262,7 +300,7 @@
         "a = eval(input(\"請輸入：\"))\n",
         "a"
       ],
-      "execution_count": 7,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "stream",
@@ -281,7 +319,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 7
+          "execution_count": 11
         }
       ]
     },
@@ -290,7 +328,7 @@
       "metadata": {
         "id": "8PjXBoZNbiyp",
         "colab_type": "code",
-        "outputId": "da1cfe72-31e9-4fb1-b769-d8a868eb193a",
+        "outputId": "5a3f9215-29e9-425e-d359-6c863b0d6e86",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
@@ -300,7 +338,7 @@
         "b=a+1\n",
         "b"
       ],
-      "execution_count": 0,
+      "execution_count": 12,
       "outputs": [
         {
           "output_type": "execute_result",
