--- a/程式閱讀題.md
+++ b/程式閱讀題.md
@@ -1,28 +1,28 @@
 # 程式閱讀題
 ```
-1.print("3*2*(17-2)")會印出甚麼結果:
+(D)1.print("3*2*(17-2)")會印出甚麼結果:
 (A)0   (B)90  (C)出現錯誤,無法印出  (D)3*2*(17-2)
 
-2.print(3*2*(17-2))會印出甚麼結果:
+(B)2.print(3*2*(17-2))會印出甚麼結果:
 (A)0   (B)90  (C)出現錯誤,無法印出  (D)3*2*(17-2)
 
-3.print("abc""+""def")會印出甚麼結果:
+(B)3.print("abc""+""def")會印出甚麼結果:
 (A)出現錯誤,無法印出   (B)abc+def  (C)abc""+""def  (D)abcdef
 
-4.print("abc"+"def")會印出甚麼結果:
+(D)4.print("abc"+"def")會印出甚麼結果:
 (A)出現錯誤,無法印出   (B)abc+def  (C)abc""+""def  (D)abcdef
 
-5.底下程式執行後結果為何?
+(C)5.底下程式執行後結果為何?
 word = "arttarataaa"
 print(word.replace("a", "z",3))
 (A)出現錯誤,無法印出   (B)arttarataaa  (C)zrttzrztaaa (D)zrttzrztzzz
 
-6.底下程式執行後結果為何?
+(D)6.底下程式執行後結果為何?
 word = "arttarataaa"
 print(word.replace("a", "z"))
 (A)出現錯誤,無法印出   (B)arttarataaa  (C)zrttzrztaaa (D)zrttzrztzzz
 
-7根據底下程式,下列敘述何者為非?[複選題]
+(ABC)7根據底下程式,下列敘述何者為非?[複選題]
 
 names = ['龍', '聖']
 index = 0
@@ -61,6 +61,7 @@ for x in range(1,101):
   sum +=x
   
 print(sum)
+輸出:5050
 ```
 ### 使用for 迴圈(loop)計算1+3+5+7.....+99
 ```
@@ -70,6 +71,7 @@ for x in range(1,101,2):
   sum +=x
   
 print(sum)
+輸出:2500
 ```
 ### 使用for 迴圈(loop)計算
 ```
@@ -82,6 +84,7 @@ for x in range(1,101,2):
   total *=x
   
 print(total)
+輸出:2725392139750729502980713245400918633290796330545803413734328823443106201171875
 ```
 
 ### 使用while 迴圈(loop)計算1+2+3+.....100
@@ -95,6 +98,7 @@ while x < 101:
   # x += 1
   
 print(sum)
+輸出:5050
 ```
 ### 使用while 迴圈(loop)計算1+3+5+7.....+99
 ```
@@ -107,6 +111,7 @@ while x < 101:
   # x += 1
   
 print(sum)
+輸出:2500
 ```
 
 ### 使用while 迴圈(loop)計算
@@ -122,4 +127,5 @@ while x < 101:
   x = x+2     # x += 2
   
 print(total)
+輸出:2725392139750729502980713245400918633290796330545803413734328823443106201171875
 ```
