--- a/Python期中練習.ipynb
+++ b/Python期中練習.ipynb
@@ -4,8 +4,7 @@
   "metadata": {
     "colab": {
       "name": "Python期中練習.ipynb",
-      "provenance": [],
-      "include_colab_link": true
+      "provenance": []
     },
     "kernelspec": {
       "name": "python3",
@@ -14,21 +13,11 @@
   },
   "cells": [
     {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
-      },
-      "source": [
-        "<a href=\"https://colab.research.google.com/github/martin20999/4080E006/blob/master/Python%E6%9C%9F%E4%B8%AD%E7%B7%B4%E7%BF%92.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
-      ]
-    },
-    {
       "cell_type": "code",
       "metadata": {
         "id": "IwX7bQEV0L2I",
         "colab_type": "code",
-        "outputId": "9dec9879-d537-4943-debe-0502313a9271",
+        "outputId": "1fb485bf-3d02-442c-b55b-87856b11e175",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
@@ -37,7 +26,7 @@
       "source": [
         "print(\"3*2*(17-2)\")"
       ],
-      "execution_count": 0,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
@@ -53,7 +42,7 @@
       "metadata": {
         "id": "TFqG8LOW0Pf5",
         "colab_type": "code",
-        "outputId": "9af86271-cd4c-4ef4-d023-e5b05d8b11a9",
+        "outputId": "b1af73bd-1934-4db6-a892-af682262c883",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
@@ -62,7 +51,7 @@
       "source": [
         "print(3*2*(17-2))"
       ],
-      "execution_count": 0,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "stream",
@@ -78,7 +67,7 @@
       "metadata": {
         "id": "HXDs1X3A0S_X",
         "colab_type": "code",
-        "outputId": "741a56bd-a090-4f4e-86e5-36f99cb6d702",
+        "outputId": "43d4b25d-29ad-4d80-cad1-ea81658712ab",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
@@ -87,7 +76,7 @@
       "source": [
         "print(\"abc\"\"+\"\"def\")"
       ],
-      "execution_count": 0,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "stream",
@@ -103,7 +92,7 @@
       "metadata": {
         "id": "dpG_flQg0WBB",
         "colab_type": "code",
-        "outputId": "eb8c4454-bc19-4a88-c4f4-ef4e4dbb397c",
+        "outputId": "8ba274d3-1fd8-4623-b670-f37e52e22518",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
@@ -112,7 +101,7 @@
       "source": [
         "print(\"abc\"+\"def\")"
       ],
-      "execution_count": 0,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "stream",
@@ -128,7 +117,7 @@
       "metadata": {
         "id": "bsGTfwiI0Ygd",
         "colab_type": "code",
-        "outputId": "9dcc6f36-ed4c-4e22-f7d8-f63d2080c8c5",
+        "outputId": "8f7e149d-8411-48cd-ca2d-de0833b4b081",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
@@ -138,7 +127,7 @@
         "word = \"arttarataaa\"\n",
         "print(word.replace(\"a\", \"z\",3))"
       ],
-      "execution_count": 0,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "stream",
@@ -154,7 +143,7 @@
       "metadata": {
         "id": "t0OM6Exa0fxD",
         "colab_type": "code",
-        "outputId": "1cabd1d7-d422-4978-fa8b-205d2f8e280d",
+        "outputId": "ea33183a-a301-4ad3-9085-c484de844835",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
@@ -164,7 +153,7 @@
         "word = \"arttarataaa\"\n",
         "print(word.replace(\"a\", \"z\"))"
       ],
-      "execution_count": 0,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "stream",
@@ -180,10 +169,10 @@
       "metadata": {
         "id": "GiimDXew0sly",
         "colab_type": "code",
-        "outputId": "d496a2b4-1462-4a8e-f8aa-2cca76462bee",
+        "outputId": "012f6dcc-ed87-4c65-ab0c-43b41a937925",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 51
+          "height": 50
         }
       },
       "source": [
@@ -195,7 +184,7 @@
         "    print(name)\n",
         "    index = index + 1"
       ],
-      "execution_count": 0,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "stream",
@@ -212,7 +201,7 @@
       "metadata": {
         "id": "kkIuZehs007Y",
         "colab_type": "code",
-        "outputId": "0cc34aa5-3af0-476b-f692-d3b0d04fee9e",
+        "outputId": "43709d67-4705-4c2f-eb87-c5bd81e087d7",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
@@ -226,7 +215,7 @@
         "  \n",
         "print(sum)"
       ],
-      "execution_count": 0,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "stream",
@@ -242,7 +231,7 @@
       "metadata": {
         "id": "94w7S_0a0-MA",
         "colab_type": "code",
-        "outputId": "05a1202c-710d-443b-b1c6-62cb11534320",
+        "outputId": "cbb3639b-35a9-4429-93a1-22ce330ee3d0",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
@@ -256,7 +245,7 @@
         "  \n",
         "print(sum)"
       ],
-      "execution_count": 0,
+      "execution_count": 12,
       "outputs": [
         {
           "output_type": "stream",
@@ -272,7 +261,7 @@
       "metadata": {
         "id": "0_uooRrU1QQ1",
         "colab_type": "code",
-        "outputId": "d7e7ac93-f561-4767-84ae-850f6c3c18d0",
+        "outputId": "e6364fd2-239b-4620-9f23-c0458d6c7163",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
@@ -286,7 +275,7 @@
         "  \n",
         "print(total)"
       ],
-      "execution_count": 0,
+      "execution_count": 13,
       "outputs": [
         {
           "output_type": "stream",
@@ -302,7 +291,7 @@
       "metadata": {
         "id": "32MKpmaG1T2n",
         "colab_type": "code",
-        "outputId": "c169528c-ad0c-4af1-e667-f4167c101369",
+        "outputId": "848e030b-94cd-4b89-a0b3-bca02bcb5fed",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
@@ -316,7 +305,7 @@
         "  \n",
         "print(sum)"
       ],
-      "execution_count": 0,
+      "execution_count": 14,
       "outputs": [
         {
           "output_type": "stream",
@@ -332,7 +321,7 @@
       "metadata": {
         "id": "dd7pVxBW1pAK",
         "colab_type": "code",
-        "outputId": "b0adf9b2-7c5e-49e8-dd33-309e86ec6a70",
+        "outputId": "66d90af3-6208-4c86-deb6-f66716b1abfe",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
@@ -349,7 +338,7 @@
         "  \n",
         "print(sum)"
       ],
-      "execution_count": 0,
+      "execution_count": 15,
       "outputs": [
         {
           "output_type": "stream",
@@ -365,7 +354,7 @@
       "metadata": {
         "id": "Hq3ZVV4v2Cg0",
         "colab_type": "code",
-        "outputId": "82d1492b-f8a6-4561-db7d-bf19be844aa2",
+        "outputId": "cd711de3-da26-4a42-e41e-8e02bf9f64a9",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
@@ -382,7 +371,7 @@
         "  \n",
         "print(sum)"
       ],
-      "execution_count": 0,
+      "execution_count": 16,
       "outputs": [
         {
           "output_type": "stream",
@@ -398,7 +387,7 @@
       "metadata": {
         "id": "JKk7jfQg2H25",
         "colab_type": "code",
-        "outputId": "9652133d-8a02-46cb-cd40-b879e250a3c3",
+        "outputId": "68c2f64b-5c02-4426-ddfd-723fc01dea20",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
@@ -414,7 +403,7 @@
         "  \n",
         "print(total)"
       ],
-      "execution_count": 0,
+      "execution_count": 17,
       "outputs": [
         {
           "output_type": "stream",
@@ -430,7 +419,7 @@
       "metadata": {
         "id": "Vuy8Vn3r2Mfk",
         "colab_type": "code",
-        "outputId": "ae72a9b7-9d86-45b4-9aa4-30352886b2a3",
+        "outputId": "0bd96fe5-8c22-42e0-ec39-5d561b7ddc4a",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
@@ -439,7 +428,7 @@
       "source": [
         "round(3.49)"
       ],
-      "execution_count": 0,
+      "execution_count": 18,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -451,7 +440,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 19
+          "execution_count": 18
         }
       ]
     },
@@ -460,7 +449,7 @@
       "metadata": {
         "id": "ex85GA742N7q",
         "colab_type": "code",
-        "outputId": "eefc52b9-ea05-4384-b0c0-1c9d1d10a0a7",
+        "outputId": "c1aba8ac-da94-462f-db0e-864d95740520",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
@@ -469,7 +458,7 @@
       "source": [
         "round(3.51)"
       ],
-      "execution_count": 0,
+      "execution_count": 24,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -481,7 +470,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 20
+          "execution_count": 24
         }
       ]
     },
@@ -490,7 +479,7 @@
       "metadata": {
         "id": "DsdUo5oO2UKF",
         "colab_type": "code",
-        "outputId": "98804c66-3518-4c06-f46b-aa2e97194d07",
+        "outputId": "c07aa640-8536-42c8-c0d0-77f02fb7e9cd",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
@@ -499,7 +488,7 @@
       "source": [
         "divmod(3,5)"
       ],
-      "execution_count": 0,
+      "execution_count": 23,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -511,7 +500,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 21
+          "execution_count": 23
         }
       ]
     },
@@ -520,7 +509,7 @@
       "metadata": {
         "id": "r2nf_gec2bMi",
         "colab_type": "code",
-        "outputId": "98fb4179-6e8e-4570-8b76-6a1409a397c9",
+        "outputId": "a3616916-8452-4839-9151-c6c68d80ea98",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
@@ -529,7 +518,7 @@
       "source": [
         "divmod(5,3)"
       ],
-      "execution_count": 0,
+      "execution_count": 22,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -550,7 +539,7 @@
       "metadata": {
         "id": "ZpG-vEh82p9B",
         "colab_type": "code",
-        "outputId": "67e06ff9-f459-4c05-a80a-0c5eabf9e99d",
+        "outputId": "e2d96d70-49bc-402c-869d-3b4d854a9980",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
@@ -559,7 +548,7 @@
       "source": [
         "divmod(-5,3)"
       ],
-      "execution_count": 0,
+      "execution_count": 21,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -571,7 +560,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 23
+          "execution_count": 21
         }
       ]
     },
@@ -580,7 +569,7 @@
       "metadata": {
         "id": "Igv9ZOUt3Z7y",
         "colab_type": "code",
-        "outputId": "cf96dca1-ad0d-42e2-a555-f9ae41b68416",
+        "outputId": "b2e6d438-c339-4558-d734-1a583fe443da",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
@@ -589,7 +578,7 @@
       "source": [
         "divmod(2,4)"
       ],
-      "execution_count": 0,
+      "execution_count": 20,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -601,7 +590,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 24
+          "execution_count": 20
         }
       ]
     },
@@ -610,7 +599,7 @@
       "metadata": {
         "id": "Jg13GuTc8LgU",
         "colab_type": "code",
-        "outputId": "e0dfc12c-89a2-4715-cd28-6ea0f9eaca55",
+        "outputId": "ed204dc0-19c6-4ade-d990-bdc56282dcc9",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
@@ -619,7 +608,7 @@
       "source": [
         "hex(7)"
       ],
-      "execution_count": 0,
+      "execution_count": 19,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -631,7 +620,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 33
+          "execution_count": 19
         }
       ]
     }
